--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ navigation: # Navigation links
   - {name: 'Contact', link: '/contact'}
 
 tagline: >
-  陈静征婚录。
+  无敌可爱的小陈静。
 
 hero_img: posts/jane1.jpg # Main background image: use the path from /assets/img/ => This will output /assets/img/posts/sleek_lg.jpg
 
